# parabox-extension-telegram

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/parabox/example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/: MainActivity.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/core/: HiltApplication.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/core/util/: AxrLottieUtil.kt  BrowserUtil.kt  DataStore.kt  FileUtil.kt  IdUtil.kt  NotificationUtil.kt  NumberUtil.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/di/: AppModule.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/domain/repository/: ChatRepository.kt  MessageRepository.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/domain/service/: ConnService.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/domain/telegram/: Authentication.kt  TdMessageUtil.kt  TelegramClient.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/domain/util/: CustomKey.kt  ServiceStatus.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/ui/main/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/ojhdtapp/parabox/extension/telegram/ui/util/: CustomModifier.kt  Preference.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: api_keys.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/parabox/example/: ExampleUnitTest.kt
tgs2gif/: build.gradle
tgs2gif/src/androidTest/java/com/ojhdtapp/tgs2gif/: ExampleInstrumentedTest.kt
tgs2gif/src/main/cpp/: CMakeLists.txt  CMakePresets.json  FindPNG.cmake  FindZLIB.cmake  PNG-debug-armv7-data.cmake  PNG-debug-armv8-data.cmake  PNG-debug-x86-data.cmake  PNG-debug-x86_64-data.cmake  PNG-release-armv7-data.cmake  PNG-release-armv8-data.cmake  PNG-release-x86-data.cmake  PNG-release-x86_64-data.cmake  PNGConfig.cmake  PNGConfigVersion.cmake  PNGTargets.cmake  ZLIB-debug-x86-data.cmake  ZLIB-debug-x86_64-data.cmake  ZLIB-release-armv7-data.cmake  ZLIBConfig.cmake  argparse-Target-debug.cmake  argparse-Target-release.cmake  argparse-config-version.cmake  argparse-config.cmake  argparse-debug-x86-data.cmake  argparse-release-armv7-data.cmake  argparseTargets.cmake  conan_android_toolchain.cmake  conan_toolchain.cmake  conanbuildenv-debug-armv7.bat  conanbuildenv-debug-armv8.bat  conanbuildenv-debug-x86.bat  conanbuildenv-release-armv7.bat  conanbuildenv-release-armv8.bat  conanbuildenv-release-x86.bat  conanfile.txt  conanrun.sh  conanrunenv-debug-armv7.sh  conanrunenv-debug-armv8.sh  conanrunenv-debug-x86.sh  conanrunenv-debug-x86_64.sh  (+22 more)
tgs2gif/src/main/java/com/ojhdtapp/tgs2gif/: NativeLib.kt
tgs2gif/src/test/java/com/ojhdtapp/tgs2gif/: ExampleUnitTest.kt
